--- a/src/components/case-studies/Moolroop/MoolroopCard.module.css
+++ b/src/components/case-studies/Moolroop/MoolroopCard.module.css
@@ -43,9 +43,9 @@
 
 .body {
   position: absolute;
-  left: 437px;
+  left: 407px;
   top: 188px;
-  width: 504px;
+  width: 534px;
   margin: 0;
   text-align: justify;
   font-family: 'Author Variable', sans-serif;
@@ -79,7 +79,7 @@
 .stamp {
   position: absolute;
   left: 409px;
-  top: 339px;
+  top: 300px;
   width: 248px;
   height: 250px;
   transform: rotate(55.66deg);
